--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage : Pentatonix</h1>
+        <h1>Fanpage : MARIOKART!!!</h1>
     </div>
     <div class="intro">
         <p>Welcome to my fanpage. </p>
-        <p>Here you can find some information about my favorite artist : Pentatonix</p>
+        <p>IT'S A MARIOKART!!!</p>
 
-        <p>I really like this band, because all their songs are sung acapella.</p>
-        <p>That means, they don't use any instruments!</p>
-        <p>They do everything with their voices!</p>
+        <p>IT'S THE BEST!!!</p>
+        <p>YOU CAN HIT CARS WITH TURTLES AND THROW BANANAS AND BOMBS!!!</p>
+        <p>IT'S COCONUT MALL!!!</p>
     </div>
     <div class="youtube">
         <iframe width="560" 
