--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
         <p>IT'S A MARIOKART!!!</p>
 
         <p>IT'S THE BEST!!!</p>
-        <p>YOU CAN HIT CARS WITH TURTLES AND THROW BANANAS AND BOMBS!!!</p>
+        <p>YOU CAN HIT CARS WITH TURTLES AND THROW BANANAS AND BOMBS AND POSSIBLY DESTROY YEARS WORTH OF BONDS AND RELATIONSHIPS!!!</p>
         <p>IT'S COCONUT MALL!!!</p>
     </div>
-    <div class="youtube">
-        <iframe width="560" 
-                height="315" 
-                src="https://www.youtube.com/embed/3MteSlpxCpo" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen></iframe>
+    <div class="memes">
+        <img src="MARIOKARTFUNNY1.jfif">
+        <img src="MARIOKARTFUNNY2.jfif">
+        <img src="MARIOKARTFUNNY3.jfif">
     </div>
     <div class="menu">
         <a href="statistics.html"><input type="button" value="statistics"></a>
