--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         <img src="MARIOKARTFUNNY2.jfif">
         <img src="MARIOKARTFUNNY3.jfif">
     </div>
+    <div class="youtube">
+        <iframe width="560" 
+                height="315" 
+                src="https://www.youtube.com/watch?v=_43cq3DalZw" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+    </div>
     <div class="menu">
         <a href="statistics.html"><input type="button" value="statistics"></a>
     </div>
